Fix scrollbar double button

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -160,7 +160,12 @@ $width: 16px;
 @mixin arrow($rotate) {
   background-image: url("data:image/svg+xml,%3Csvg  transform='rotate(#{$rotate})' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 6.86 6.86'%3E%3Cpath fill='%231d1d1b' d='M4.41 2.94v-.98h-.98V.98h-.98V0h-.98V6.86h.98v-.98h.98V4.9h.98v-.98h.98v-.98h-.98z'/%3E%3C/svg%3E");
 }
-
+html::-webkit-scrollbar-button:vertical:start:increment,
+html::-webkit-scrollbar-button:vertical:end:decrement,
+html::-webkit-scrollbar-button:horizontal:start:increment,
+html::-webkit-scrollbar-button:horizontal:end:decrement {
+  display: none;
+}
 html::-webkit-scrollbar {
   width: $width;
   background: red;
